--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -9,34 +9,38 @@ export interface Props {
 const { title, subtitle, image, alt = `${title} Project` } = Astro.props;
 import {Image} from 'astro:assets';
 ---
-<div
-  class="group relative flex flex-col rounded-2xl overflow-hidden transition-shadow duration-300 bg-[#121012] text-white border border-[#FFBF08]/40 hover:border-[#FFBF08] shadow-md hover:shadow-gold-glow"
-  data-aos="fade-up"
-  data-aos-delay={100}
-  data-aos-duration="800"
+<!-- color 1 : #E2E0DF  color 2 #D0C2A9 coloe 3 #5C331C color 4 #32160B -->
+ <!-- #746d6d -->
+
+ 
+ <div
+ class="group relative flex flex-col rounded-2xl overflow-hidden transition-shadow duration-300 bg-[#E8E8E0] text-[#2F1E13] border border-[#BFA67D]/70 hover:border-[#BFA67D] shadow-sm hover:shadow-[0_12px_40px_rgba(191,166,125,0.6)]"
+ data-aos="fade-up"
+ data-aos-delay={100}
+ data-aos-duration="800"
 >
-  <a href="#" class="flex flex-col">
-    <div class="relative overflow-hidden">
-      <span class="absolute inset-0 -mt-12 w-1/2 translate-x-[250%] rotate-12 bg-[#FFBF08] opacity-20 group-hover:translate-x-[-250%] transition-all duration-500 ease-out z-10 pointer-events-none" />
+ <a href="#" class="flex flex-col">
+   <div class="relative overflow-hidden">
+     <span class="absolute inset-0 -mt-12 w-1/2 translate-x-[250%] rotate-12 bg-[#BFA67D] opacity-30 group-hover:translate-x-[-250%] transition-all duration-700 ease-out z-10 pointer-events-none" />
 
-      <Image
-        src={image}
-        alt={alt}
-        width={896}
-        height={1280}
-        quality={80}
-        format="webp"
-        class="w-full aspect-[3/4] object-cover group-hover:scale-105 group-hover:brightness-110 transition-transform duration-500 ease-in-out"
-        loading="eager"
-        decoding="async"
-      />
-    </div>
+     <Image
+       src={image}
+       alt={alt}
+       width={896}
+       height={1280}
+       quality={80}
+       format="webp"
+       class="w-full aspect-[3/4] object-cover group-hover:scale-105 group-hover:brightness-[1.2] transition-transform duration-500 ease-in-out"
+       loading="eager"
+       decoding="async"
+     />
+   </div>
 
-    <div class="p-4">
-      <h3 class="text-lg font-semibold text-white group-hover:text-[#FFBF08] transition-colors duration-300">
-        {title}
-      </h3>
-      <p class="text-sm text-gray-400 mt-1">{subtitle}</p>
-    </div>
-  </a>
+   <div class="p-4">
+     <h3 class="text-lg font-semibold text-[#2F1E13] group-hover:text-[#A17C52] transition-colors duration-300">
+       {title}
+     </h3>
+     <p class="text-sm text-[#6D5B52] mt-1">{subtitle}</p>
+   </div>
+ </a>
 </div>
