--- a/src/pages/team/index.astro
+++ b/src/pages/team/index.astro
@@ -3,12 +3,12 @@ import Layout from '@layouts/Layout.astro';
 import InnerHero from '@components/sections/InnerHero.astro';
 import TeamGrid from '@components/sections/TeamGrid.astro';
 
-const seoTitle = "Our Team";
-const seoDescription = "Our team is made up of a diverse group of people who are passionate about building amazing websites with ease.";
+const seoTitle = "أعضاء الفريق";
+const seoDescription = "أعضاء الفريق is made up of a diverse group of people who are passionate about building amazing websites with ease.";
 
 const heroContent = {
-    title: "Our Team",
-    description: "Meet the people behind the magic",
+    title: "أعضاء الفريق",
+    description: "",
 }
 
 ---
